remove dummy link

--- a/works/index.html
+++ b/works/index.html
@@ -27,7 +27,7 @@
 		</div>
 
 		<div class="container">
-			<div class="thumb"><a href="img/alagms.jpg"><img src="img/i/alagms.jpg" alt=""></a><div><a href="#">link</a></div></div>
+			<div class="thumb"><a href="img/alagms.jpg"><img src="img/i/alagms.jpg" alt=""></a></div>
 			<div class="thumb"><a href="img/alser.jpg"><img src="img/i/alser.jpg" alt=""></a></div>
 			<div class="thumb"><a href="img/antoshka.jpg"><img src="img/i/antoshka.jpg" alt=""></a></div>
 			<div class="thumb"><a href="img/autopedia.jpg"><img src="img/i/autopedia.jpg" alt=""></a></div>
