--- a/grid-demo/index-json.html
+++ b/grid-demo/index-json.html
@@ -4,53 +4,176 @@
     <title>Grid example remote JSON</title>
     <link rel="stylesheet" href="css/kendo.common.min.css" />
     <link rel="stylesheet" href="css/kendo.default.min.css" />
+    <link rel="stylesheet" href="css/grid.css" />
 
     <script src="js/jquery.min.js"></script>
     <script src="js/kendo.all.min.js"></script>
+    <script src="js/jszip.min.js"></script>
 </head>
 <body>
 
-<div id="example">
-    <div id="grid"></div>
+<div class="grid-container">
+    <div class="grid-title">
+        Institutional investor:
+        <strong>BlackRock Advisors, LLC</strong>
+    </div>
+    <div class="main-grid" id="grid"></div>
+    <div class="save-box">
+        <span class="save-box__info">You can save your grid settings</span>
+        <button class="save-box__button k-button" id="save">Save State</button>
+        <button class="save-box__button k-button" id="load">Load State</button>
+    </div>
 
     <script>
         $(document).ready(function() {
-            $("#grid").kendoGrid({
+            var grid = $("#grid");
+
+            grid.kendoGrid({
+                toolbar: ["excel"],
+                excel: {
+                    fileName: "Kendo UI Grid Export.xlsx",
+                    //proxyURL: "//demos.telerik.com/kendo-ui/service/export",
+                    filterable: true
+                },
                 dataSource: {
 //                    data: products,
 
                     transport: {
-                        read: "//jsonplaceholder.typicode.com/photos",
+                        read: "data/data.json",
                         type: "json"
                     },
                     schema: {
                         model: {
                             fields: {
-                                albumId: { type: "number" },
-                                title: { type: "string" },
-                                id: { type: "number" },
-                                url: { type: "string" }
+                                Issuer: { type: "string" },
+                                Tranche: { type: "string" },
+                                Broker_Alpha: { type: "string" },
+                                Pricing_Date: { type: "string" },
+                                Transaction_Type: { type: "string" },
+                                Product_Type: { type: "string" },
+                                Indication: { type: "number" },
+                                Allocation: { type: "number" },
+                                Percent_allocation: { type: "string" },
+                                Some: { type: "number" },
                             }
                         }
                     },
-                    pageSize: 50
+//                    group: {
+//                        field: "Discontinued", aggregates: [
+//                            { field: "ProductName", aggregate: "count" },
+//                            { field: "UnitPrice", aggregate: "sum"},
+//                            { field: "UnitsOnOrder", aggregate: "average" },
+//                            { field: "UnitsInStock", aggregate: "count" }
+//                        ]
+//                    },
+                    aggregate: [ { field: "Issuer", aggregate: "count" },
+                        { field: "Indication", aggregate: "min" },
+                        { field: "Some", aggregate: "sum" }],
+                    pageSize: 100
                 },
-                height: 650,
-                scrollable: true,
+
+                height: 550,
+                scrollable: {
+                    virtual: true
+                },
                 sortable: true,
-                filterable: true,
                 reorderable: true,
+                groupable: true,
                 resizable: true,
-                pageable: {
-                    input: true,
-                    numeric: false
-                },
+                filterable: true,
+                columnMenu: true,
+//                pageable: {
+//                    input: true,
+//                    numeric: false
+//                },
                 columns: [
-                    { field: "albumId", title: "albumId", width: "130px" },
-                    "title",
-                    { field: "id", title: "id", width: "130px" },
-                    { field: "url", width: "250px" }
+                    {
+                        field: "Issuer",
+                        title: "Issuer",
+                        footerTemplate: "Total Count: #=count#",
+                        locked: true,
+                        lockable: true,
+                        width: 150
+                    },
+                    {
+                        field: "Tranche",
+                        title: "Tranche",
+                        locked: false,
+                        lockable: true
+                        ,width: 150
+                    },
+                    {
+                        field: "Broker_Alpha",
+                        title: "Broker Alpha",
+                        locked: false,
+                        lockable: true
+                        ,width: 150
+                    },
+                    {
+                        field: "Pricing_Date",
+                        title: "Pricing Date",
+                        locked: false,
+                        lockable: true
+                        ,width: 150
+                    },
+
+                    {
+                        field: "Transaction_Type",
+                        title: "Transaction Type",
+                        locked: false,
+                        lockable: true
+                        ,width: 150
+                    },
+                    {
+                        field: "Product_Type",
+                        title: "Product Type",
+                        locked: false,
+                        lockable: true
+                        ,width: 150
+                    },
+                    {
+                        field: "Indication",
+                        title: "Indication",
+                        format: "{0:c0}",
+                        aggregates: ["min"],
+                        footerTemplate: "Min: #= kendo.toString(min, 'c') #"
+                        ,width: 150
+                    },
+                    {
+                        field: "Allocation",
+                        title: "Allocation",
+                        format: "{0:c0}"
+                        ,width: 150
+                    },
+                    {
+                        field: "Percent_allocation",
+                        title: "Percent allocation"
+                        ,width: 150
+                    },
+                    {
+                        field: "Some",
+                        title: "Some",
+                        format: "{0:c}",
+                        aggregates: ["sum"],
+                        footerTemplate: "Sum: #= kendo.toString(sum, 'c') #"
+                        ,width: 150
+                    }
                 ]
+            });
+
+            var gridData = grid.data("kendoGrid");
+
+            $("#save").click(function (e) {
+                e.preventDefault();
+                localStorage["kendo-grid-options"] = kendo.stringify(gridData.getOptions());
+            });
+
+            $("#load").click(function (e) {
+                e.preventDefault();
+                var options = localStorage["kendo-grid-options"];
+                if (options) {
+                    gridData.setOptions(JSON.parse(options));
+                }
             });
         });
     </script>
