--- a/grid-demo/index.html
+++ b/grid-demo/index.html
@@ -7,6 +7,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/kendo.all.min.js"></script>
+    <script src="js/jszip.min.js"></script>
 </head>
 <body>
 <script src="data/products.js"></script>
@@ -17,6 +18,12 @@
     <script>
         $(document).ready(function() {
             $("#grid").kendoGrid({
+                toolbar: ["excel"],
+                excel: {
+                    fileName: "Kendo UI Grid Export.xlsx",
+                    //proxyURL: "//demos.telerik.com/kendo-ui/service/export",
+                    filterable: true
+                },
                 dataSource: {
                     data: products,
                     schema: {
@@ -29,23 +36,45 @@
                             }
                         }
                     },
-                    pageSize: 50
+
+                    pageSize: 200,
+//                    group: {
+//                        field: "Discontinued", aggregates: [
+//                            { field: "ProductName", aggregate: "count" },
+//                            { field: "UnitPrice", aggregate: "sum"},
+//                            { field: "UnitsOnOrder", aggregate: "average" },
+//                            { field: "UnitsInStock", aggregate: "count" }
+//                        ]
+//                    },
+                    aggregate: [ { field: "ProductName", aggregate: "count" },
+                        { field: "UnitPrice", aggregate: "sum" },
+                        { field: "UnitsOnOrder", aggregate: "average" },
+                        { field: "UnitsInStock", aggregate: "min" },
+                        { field: "UnitsInStock", aggregate: "max" }]
                 },
-                height: 650,
-                scrollable: true,
+                height: 550,
+                groupable: true,
+//                scrollable: true,
+                scrollable: {
+//                    virtual: true
+                },
                 sortable: true,
                 filterable: true,
                 reorderable: true,
                 resizable: true,
-                pageable: {
-                    input: true,
-                    numeric: false
-                },
+//                pageable: {
+//                    input: true,
+//                    numeric: false
+//                },
                 columns: [
-                    "ProductName",
-                    { field: "UnitPrice", title: "Unit Price", format: "{0:c}", width: "130px" },
+                    {field: "ProductName", aggregates: ["count"], footerTemplate: "Total Count: #=count#"},
+                    { field: "UnitPrice", title: "Unit Price", format: "{0:c}", width: "130px", aggregates: ["sum"], footerTemplate: "#= kendo.toString(sum, 'c') #" },
                     { field: "UnitsInStock", title: "Units In Stock", width: "130px" },
                     { field: "Discontinued", width: "130px" }
+//                    {field: "ProductName"},
+//                    { field: "UnitPrice", title: "Unit Price", format: "{0:c}", width: "130px"},
+//                    { field: "UnitsInStock", title: "Units In Stock", width: "130px" },
+//                    { field: "Discontinued", width: "130px" }
                 ]
             });
         });
