grid-demo, filtering reorganized

--- a/grid-demo/index.html
+++ b/grid-demo/index.html
@@ -6,10 +6,7 @@
     <link rel="stylesheet" href="css/kendo.default.min.css" />
     <link rel="stylesheet" href="css/grid.css" />
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/kendo.all.min.js"></script>
-    <script src="js/jszip.min.js"></script>
-    <script src="js/grid.js"></script>
+
 </head>
 <body>
 
@@ -25,11 +22,13 @@
         <button class="save-box__button k-button" id="load">Load State</button>
     </div>
 
-    <script>
-
-    </script>
 </div>
 
+<script src="js/jquery.min.js"></script>
+<!--<script src="js/kendo.custom.min.js"></script>-->
+<script src="js/kendo.all.min.js"></script>
+<script src="js/jszip.min.js"></script>
+<script src="js/grid.js"></script>
 
 </body>
 </html>
