--- a/grid-demo/index.html
+++ b/grid-demo/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Grid example remote JSON</title>
     <link rel="stylesheet" href="css/kendo.common.min.css" />
     <link rel="stylesheet" href="css/kendo.default.min.css" />
@@ -18,11 +22,33 @@
     <div class="main-grid" id="grid"></div>
     <div class="save-box">
         <span class="save-box__info">You can save your grid settings</span>
-        <button class="save-box__button k-button" id="save">Save State</button>
-        <button class="save-box__button k-button" id="load">Load State</button>
+        <button class="generic__button k-button" id="save">Save State</button>
+        <button class="generic__button k-button" id="load">Load State</button>
+        <!--<button class="generic__button k-button" id="openButton">Settings</button>-->
     </div>
 
 </div>
+
+<!--<div id="window" class="generic-popup">-->
+    <!--<div id="listView" class="list-view"></div>-->
+    <!--<button class="generic__button k-button" id="revert-settings">Revert</button>-->
+    <!--<button class="generic__button k-button" id="new-settings">Create New</button>-->
+    <!--<button class="generic__button k-button" id="save-settings">Save current settings</button>-->
+<!--</div>-->
+
+<!--<div id="save-modal" class="generic-popup">-->
+    <!--<div class="modal-text">Are you sure you want to Save current settings to Allocation Layout?</div>-->
+    <!--<button class="generic__button k-button" id="save-yes">Yes</button>-->
+    <!--<button class="generic__button k-button" id="save-no">No</button>-->
+<!--</div>-->
+
+<!--<div id="revert-modal" class="generic-popup">-->
+    <!--<div class="modal-text">Are you sure you want to Revert Allocation Layout to its default settings?</div>-->
+    <!--<button class="generic__button k-button" id="revert-yes">Yes</button>-->
+    <!--<button class="generic__button k-button" id="revert-no">No</button>-->
+<!--</div>-->
+
+
 
 <script src="js/jquery.min.js"></script>
 <!--<script src="js/kendo.custom.min.js"></script>-->
