grid-demo, filtering tweaks #2

--- a/grid-demo/index.html
+++ b/grid-demo/index.html
@@ -24,29 +24,29 @@
         <span class="save-box__info">You can save your grid settings</span>
         <button class="generic__button k-button" id="save">Save State</button>
         <button class="generic__button k-button" id="load">Load State</button>
-        <!--<button class="generic__button k-button" id="openButton">Settings</button>-->
+        <button class="generic__button k-button" id="openButton">Settings</button>
     </div>
 
 </div>
 
-<!--<div id="window" class="generic-popup">-->
-    <!--<div id="listView" class="list-view"></div>-->
-    <!--<button class="generic__button k-button" id="revert-settings">Revert</button>-->
-    <!--<button class="generic__button k-button" id="new-settings">Create New</button>-->
-    <!--<button class="generic__button k-button" id="save-settings">Save current settings</button>-->
-<!--</div>-->
+<div id="window" class="generic-popup">
+    <div id="listView" class="list-view"></div>
+    <button class="generic__button k-button" id="revert-settings">Revert</button>
+    <button class="generic__button k-button" id="new-settings">Create New</button>
+    <button class="generic__button k-button" id="save-settings">Save current settings</button>
+</div>
 
-<!--<div id="save-modal" class="generic-popup">-->
-    <!--<div class="modal-text">Are you sure you want to Save current settings to Allocation Layout?</div>-->
-    <!--<button class="generic__button k-button" id="save-yes">Yes</button>-->
-    <!--<button class="generic__button k-button" id="save-no">No</button>-->
-<!--</div>-->
+<div id="save-modal" class="generic-popup">
+    <div class="modal-text">Are you sure you want to Save current settings to Allocation Layout?</div>
+    <button class="generic__button k-button" id="save-yes">Yes</button>
+    <button class="generic__button k-button" id="save-no">No</button>
+</div>
 
-<!--<div id="revert-modal" class="generic-popup">-->
-    <!--<div class="modal-text">Are you sure you want to Revert Allocation Layout to its default settings?</div>-->
-    <!--<button class="generic__button k-button" id="revert-yes">Yes</button>-->
-    <!--<button class="generic__button k-button" id="revert-no">No</button>-->
-<!--</div>-->
+<div id="revert-modal" class="generic-popup">
+    <div class="modal-text">Are you sure you want to Revert Allocation Layout to its default settings?</div>
+    <button class="generic__button k-button" id="revert-yes">Yes</button>
+    <button class="generic__button k-button" id="revert-no">No</button>
+</div>
 
 
 
